# BoberCrawler

./: BoberCrawler.py  README.md  pyproject.toml  requirements.txt
bober_crawler/: cli.py
