[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bober-crawler"
version = "0.1.0"
description = "Async Playwright-based web crawler for security testing"
authors = [{ name="Bobernator" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0"
]

[project.scripts]
bober-crawler = "bober_crawler.cli:main"
